--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: node-app
-  namespace: node-app-demo-aditi
+  namespace: aditi-poc
 spec:
   replicas: 1
   selector:
@@ -59,7 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: node-app-svc
-  namespace: node-app-demo-aditi
+  namespace: aditi-poc
 spec:
   selector:
     app: node-app
@@ -72,7 +72,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: node-app-route
-  namespace: node-app-demo-aditi
+  namespace: aditi-poc
 spec:
   path: /employee
   to:
